Fixed TimeInput stretching outside of grid.

--- a/styles/modals/add-recipe/general-info/TimeInput.module.scss
+++ b/styles/modals/add-recipe/general-info/TimeInput.module.scss
@@ -2,7 +2,7 @@
   grid-column: span 2;
 
   display: grid;
-  grid-auto-columns: max-content auto;
+  grid-auto-columns: max-content 1fr;
   grid-column-gap: .75em;
   align-items: center;
 }
